test/should_fail/inh_attrib_015.grg
using inh_attrib_model_015;

rule r {
	pattern {
	}
	replace {
	}
}

